# structured-output-cookbook

./: CHANGELOG.md  IMPROVEMENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  release.yml
data/: customer_support_extraction_20250629_090214.json
examples/: README.md  news_schema.json
src/structured_output_cookbook/: __init__.py  cli.py  config.py  extractor.py  logger.py
src/structured_output_cookbook/schemas/: __init__.py  base.py
src/structured_output_cookbook/templates/: __init__.py  email.py  event.py  job_description.py  product_review.py  recipe.py
src/structured_output_cookbook/utils/: __init__.py  cost_tracker.py  logger.py  rate_limiter.py  schema_loader.py
tests/: conftest.py
tests/unit/: test_config.py  test_cost_tracker.py  test_extractor.py
