[project]
name = "structured-output-cookbook"
dynamic = ["version"]
description = "Extract structured data from text using LLMs with ready-to-use templates"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Saverio Mazza", email = "saverio3107@gmail.com" }
]
maintainers = [
    { name = "Saverio Mazza", email = "saverio3107@gmail.com" }
]
license = { text = "MIT" }
keywords = [
    "openai", "llm", "data-extraction", "text-processing", 
    "structured-data", "templates", "pydantic", "json-extraction",
    "nlp", "automation", "api-wrapper"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Data Scientists",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

dependencies = [
    "openai>=1.54.0",
    "pydantic>=2.9.0",
    "loguru>=0.7.2",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]

[project.scripts]
structured-output = "structured_output_cookbook.cli:main"

[project.urls]
Homepage = "https://github.com/mazzasaverio/structured-output-cookbook"
Repository = "https://github.com/mazzasaverio/structured-output-cookbook"
Documentation = "https://github.com/mazzasaverio/structured-output-cookbook#readme"
"Bug Tracker" = "https://github.com/mazzasaverio/structured-output-cookbook/issues"
Changelog = "https://github.com/mazzasaverio/structured-output-cookbook/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/mazzasaverio/structured-output-cookbook"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/structured_output_cookbook/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/structured_output_cookbook"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102", "S101", "PLR0913"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/structured_output_cookbook",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-v"
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]